# connectfourvision

./: .gitignore  CMakeLists.txt  ComputerVisionLabAbschlussprojekt.pro  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
